--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>Donaciones – Proyecto de Investigación</title>
 <link rel="icon" type="image/png" href="favicon.png" />
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-<style>
+
+  <style>
   body {
     font-family: 'Segoe UI', Arial, sans-serif;
     background: #f5f5f7;
@@ -266,7 +267,25 @@ function applyLanguage() {
   document.getElementById("donateBtn").innerText = t.donateBtn;
   document.getElementById("donateWarning").innerText = t.donateWarning;
 }
+ document.getElementById("connectBtn").onclick = async () => {
+      if (typeof window.ethereum === "undefined") {
+        alert("No se detectó MetaMask.");
+        return;
+      }
 
+      const provider = new ethers.providers.Web3Provider(window.ethereum);
+
+      try {
+        await provider.send("eth_requestAccounts", []);
+        const signer = provider.getSigner();
+        const addr = await signer.getAddress();
+        document.getElementById("addr").textContent = addr;
+        alert("Conectado con éxito: " + addr);
+      } catch (e) {
+        console.error(e);
+        alert("El usuario canceló o hubo un error.");
+      }
+    };
 // ====================== CONNECT WALLET ========================
 document.getElementById("connectBtn").onclick = async () => {
   try {
@@ -275,7 +294,7 @@ document.getElementById("connectBtn").onclick = async () => {
       return;
     }
 
-    provider = new ethers.providers.Web3Provider(window.ethereum);
+    const provider = new ethers.providers.Web3Provider(window.ethereum);
 
     // Solicitar conexión
     await provider.send("eth_requestAccounts", []);
