--- a/index.html
+++ b/index.html
@@ -406,11 +406,13 @@ document.getElementById("sendCollab").onclick = async () => {
     };
 
     // Envío simple (no-cors) al Apps Script
-    await fetch(GOOGLE_WEBAPP_URL, {
-      method: "POST",
-      mode: "no-cors",
-      body: JSON.stringify(payload)
-    });
+await fetch(GOOGLE_WEBAPP_URL, {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify(payload)
+});
 
     showStatus("Datos enviados. ¡Gracias por colaborar!");
   } catch (err) {
@@ -425,8 +427,8 @@ async function cargarColaboradoresPublicos() {
   contenedor.textContent = "Cargando...";
 
   try {
-    const res = await fetch(GOOGLE_WEBAPP_URL); // GET -> doGet
-    const data = await res.json(); // se espera un array de { nombre, pais, modo }
+const res = await fetch(GOOGLE_WEBAPP_URL);
+const data = await res.json();
 
     contenedor.innerHTML = "";
 
