--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ document.getElementById("sendCollab").onclick = async () => {
       ciudad: document.getElementById("collabCity").value,
       edad: document.getElementById("collabAge").value,
       comentario: document.getElementById("collabComment").value,
-      MontoUSDT: amountInput,
+      MontoUSDT: amountUSDT,
       txHash: ultimoTxHash || "",     // ← definilo cuando confirmás donate()
       userAgent:  navigator.userAgent || ""
     };
